corrections erreurs suite soutenance 1 : form edit => collapse chemin user sans id

--- a/frontend/src/containers/FormEdit/FormEdit.css
+++ b/frontend/src/containers/FormEdit/FormEdit.css
@@ -5,6 +5,7 @@
     height: fit-content;
     margin: 3rem auto;
     padding: 2rem;
+    color: #2c3e50;
 }
 
 .sign-in-icon {
